# yirang-fs-queue

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
CommonLibrary/: CMakeLists.txt
CommonLibrary/ThreadPool/: CMakeLists.txt  Job.cpp  Job.h  JobPool.cpp  JobPool.h  JobPriorities.cpp  JobPriorities.h  ThreadPool.cpp  ThreadPool.h  ThreadWorker.cpp  ThreadWorker.h
CommonLibrary/Utilities/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Combiner.cpp  Combiner.h  Compressor.cpp  Compressor.h  Converter.cpp  Converter.h  File.cpp  File.h  Folder.cpp  Folder.h  FolderWatcher.cpp  FolderWatcher.h  Generator.cpp  Generator.h  Log.cpp  Log.h  LogTypes.h  Logger.cpp  Logger.h
MainMQ/: CMakeLists.txt  Configurations.cpp  Configurations.h  MailboxHandler.cpp  MailboxHandler.h  MailboxTypes.h  MessageValidator.cpp  MessageValidator.h  QueueManager.cpp  QueueManager.h  main.cpp  main_mq_configuration.json  sqlite_schema.sql
MainMQ/BackendAdapter/: BackendAdapter.h  CMakeLists.txt  FileSystemAdapter.cpp  HybridAdapter.cpp  SQLiteAdapter.cpp  SQLiteAdapter.h  sqlite_schema.sql
Samples/: CMakeLists.txt
Samples/yirangmq-cli/: CMakeLists.txt
Samples/yirangmq-cli-consumer/: CMakeLists.txt  Configurations.cpp  Configurations.h  consumer_configuration.json  main.cpp
Samples/yirangmq-cli-publisher/: CMakeLists.txt  Configurations.cpp  Configurations.h  main.cpp  publisher_configuration.json
docker/: Dockerfile  docker-compose.sh  docker-compose.yml
